Create Book class with author, title, and publishing company
Create ReadingList class with the ability to get the list and save a
book

Create the test cases for the functionality of the ReadingList Class

Update package.json to import modules in tests

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "A command line application that uses the Google Books API to search for books and has the ability to add them to a \"Reading List\"",
   "main": "App.js",
+  "type": "module",
   "scripts": {
-    "test": "test"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
