--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "App.js",
   "type": "module",
   "scripts": {
+    "start": "node App.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ManahanJ/GoogleBooksAPISearch.git"
+  },
+  "jest": {
+    "transform": {}
   },
   "author": "Jonathan Manahan",
   "license": "ISC",
@@ -18,6 +22,8 @@
   },
   "homepage": "https://github.com/ManahanJ/GoogleBooksAPISearch#readme",
   "dependencies": {
-    "jest": "^27.4.5"
+    "dotenv": "^10.0.0",
+    "jest": "^27.4.5",
+    "node-fetch": "^3.1.0"
   }
 }
